Improve type guessing

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,11 +4,18 @@
 	
 </head>
 <body>
-	<script src="../build/party-time.min.js"></script>
+	<script src="../build/party-time.js"></script>
 	<script>
 		document.write(pt.convert("BJP"))
+		document.write("<br />")
 		document.write(pt.convert("Indian National Congress"))
+		document.write("<br />")
 		document.write(pt.convert("YuS"))
+		document.write("<br />")
+		document.write(pt.convert("LoRP"))
+		document.write("<br />")
+		document.write(pt.convert("Loktantrik Rashrtavadi Party"))
+		document.write("<br />")
 	</script>
 </body>
 </html>
