Add more parties for GJ 2017

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,16 @@
 		document.write("<br />")
 		document.write(pt.convert("Loktantrik Rashrtavadi Party"))
 		document.write("<br />")
+		document.write(pt.convert("Janata Dal  (United)"));
+		document.write("<br />")
+		document.write(pt.convert("Janata Dal  (Secular)"));
+		document.write("<br />")
+		document.write(pt.convert("Communist Party of India  (Marxist-Leninist)  (Liberation)"));
+		document.write("<br />")
+		document.write(pt.convert("Communist Party of India (Marxist-Leninist) (Liberation)"));
+		document.write("<br />")
+		document.write(pt.convert("Communist Party of India  (Marxist)"));
+		document.write("<br />")
 	</script>
 </body>
 </html>
