Fix getInfo so it does not automatically coerce abbreviations to all-caps

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,26 +6,7 @@
 <body>
 	<script src="../build/party-time.js"></script>
 	<script>
-		document.write(pt.convert("BJP"))
-		document.write("<br />")
-		document.write(pt.convert("Indian National Congress"))
-		document.write("<br />")
-		document.write(pt.convert("YuS"))
-		document.write("<br />")
-		document.write(pt.convert("LoRP"))
-		document.write("<br />")
-		document.write(pt.convert("Loktantrik Rashrtavadi Party"))
-		document.write("<br />")
-		document.write(pt.convert("Janata Dal  (United)"));
-		document.write("<br />")
-		document.write(pt.convert("Janata Dal  (Secular)"));
-		document.write("<br />")
-		document.write(pt.convert("Communist Party of India  (Marxist-Leninist)  (Liberation)"));
-		document.write("<br />")
-		document.write(pt.convert("Communist Party of India (Marxist-Leninist) (Liberation)"));
-		document.write("<br />")
-		document.write(pt.convert("Communist Party of India  (Marxist)"));
-		document.write("<br />")
+		document.write(pt.convert("RPI(Khobragade)"))
 	</script>
 </body>
 </html>
