--- a/demo/index.html
+++ b/demo/index.html
@@ -13,10 +13,10 @@
 
 		// document.write(JSON.stringify(g))
 		// document.write(JSON.stringify(h))
-		var g = pt.getInfo("Communist Party Of India  (Marxist)");
-		var g = pt.getType("Communist Party Of India  (Marxist)");
-		var h = pt.convert("Communist Party Of India  (Marxist)");
-		console.log(g, h)
+		var i = pt.getInfo("Communist Party Of India  (Marxist-leninist)  (Liberation)");
+		var t = pt.getType("Communist Party Of India  (Marxist-leninist)  (Liberation)");
+		var c = pt.convert("Communist Party Of India  (Marxist-leninist)  (Liberation)");
+		console.log(i, t, c)
 
 	</script>
 </body>
